Changes made for major project
